[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-tmle"
version = "0.1.0"
description = "Targeted Maximum Likelihood Estimation for causal inference in insurance pricing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
full = ["lightgbm>=4.0", "xgboost>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_tmle"]
